# habits-stepper

./: .gitignore  Cargo.toml  build.rs  flake.nix  readme.md
.github/workflows/: rust_ci.yml
case/: battery-cap.scad  battery-cap.stl  battery-holder.scad  battery-holder.stl  case.scad  case.stl  debug.scad  debug.stl  mcu-stopper.scad  mcu-stopper.stl  mixin.scad
doc/: battery.md  display.md  power.md  references.md  sessions.md  sleep.md  udev.md  user_input.md  wiring.md
src/: display.rs  lib.rs  main.rs  ntp.rs  sessions.rs  storage.rs  switch.rs  time.rs  user_input.rs  wifi.rs
src/display/: symbol.rs
src/sessions/: storage.rs
tests/: storage_test.rs
